<resources>
    <string name="app_name">Start</string>
    <string name="button_allow">Allow</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Sign in</string>
    <string name="button_open_settings">Open settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="dialog_permission_error_title">Permissions</string>
    <string name="dialog_permission_error_message">Please allow all permissions. Without them application can\'t work.</string>
    <string name="dialog_permission_denied_error_message">Application can\'t work without allowed permissions. Please open the settings and allow all required permissions.</string>
    <string name="action_bar_my_surveys_title">My surveys</string>
    <string name="action_bar_add_child">Add new child</string>
    <string name="action_bar_add_first_parent">Add first parent</string>
    <string name="action_bar_add_second_parent">Add second parent</string>
    <string name="action_bar_edit_child">Edit child\'s info</string>
    <string name="action_bar_edit_first_parent">Edit first parent\'s info</string>
    <string name="action_bar_edit_second_parent">Edit second parent\'s info</string>
    <string name="action_bar_child_information">Child\'s profile</string>
    <string name="action_bar_survey">Survey %s</string>
    <string name="action_bar_child_diagnosis">Pre-existing diagnostic info</string>
    <string name="action_bar_menu">Menu</string>
    <string name="menu_about_project">About START</string>
    <string name="menu_user_guide">User guide</string>
    <string name="menu_navigation_user_guide">User guide</string>
    <string name="menu_navigation_about_project">About the project</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="menu_navigation_log_out">Log out</string>
    <string name="menu_navigation_english">En</string>
    <string name="menu_navigation_hindi">Hn</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_parent">Parent</string>
    <string name="text_guardian">Guardian</string>
    <string name="success_message_password_valid">Password is valid</string>
    <string name="success_message_password_changed">Password has been changed.</string>
    <string name="error_message_login_failed_title">Authentication failed</string>
    <string name="error_message_login_failed">The username and/or password are incorrect. Please check them and try again.</string>
    <string name="error_message_login_internet_connection_failed">Authentication has failed. Please check your internet connection.</string>
    <string name="error_message_login_attempt_failed">You can attempt the next login after 30 minutes.</string>
    <string name="error_message_user_validation">Enter a valid username</string>
    <string name="error_message_password_validation">Enter a value between 4 and 10 alphanumeric characters</string>
    <string name="error_message_forgot_password_validation">Please, enter the same passwords.</string>
    <string name="error_message_forgot_date">Please, enter a correct username and date of birth.</string>
    <string name="error_message_reset_password">The username and/or date of birth are incorrect. Please check them and try again.</string>
    <string name="error_message_login_attempts_end">The account was suspended. Please, contact your supervisor to unblock the account.</string>
    <string name="error_message_error">Error</string>
    <string name="error_message_upload_general">Unable to upload survey. Please check your internet connection</string>
    <string name="error_message_upload_internet_connection">Uploading is failed. Please check your internet connection</string>
    <string name="error_message_upload_add_child">Unable to upload child info. Please check your internet connection</string>
    <string name="error_message_upload_add_survey">Unable to upload survey info. Please check your internet connection</string>
    <string name="error_message_upload_test">Unable to upload test %s. Please check your internet connection</string>
    <string name="consent_dialog_header_text">Participant information sheet</string>
    <string name="consent_sign_dialog_header_text">Parent/Guardian signature</string>
    <string name="consent_dialog_success_header_text">Successful registration</string>
    <string name="consent_dialog_success_message_text">The registration was completed successfully. Do you want to visit My surveys page or start the survey?</string>
    <string name="consent_dialog_paragraph_title_2">Information Sheet</string>
    <string name="consent_dialog_paragraph_message_1">I, agree for my child to participate in the study, “Evaluating social, emotional, and cognitive development of children”, being conducted by Dr Bhismadev Chakrabarti and Dr Indu Dubey at The University of Reading. I have seen and read a copy of the Participants Information Sheet and have been given the opportunity to ask questions about the study and these have been answered to my satisfaction. I understand that all personal information will remain confidential to the Investigator and arrangements for the storage and eventual disposal of any identifiable material have been made clear to me. I understand that participation in this study is voluntary and that I can withdraw at any time without having to give an explanation.
        \n\nI am happy to proceed with my child’s participation.</string>
    <string name="consent_dialog_paragraph_message_2">
        Supervisor: Dr Bhismadev Chakrabarti
        \nEmail: b.chakrabarti@reading.ac.uk
        \nPhone: +44 (0)118 378 5551
        \n\nExperimenters:
        \nDr Indu Dubey: i.dubey@reading.ac.uk
        \n\nWe would be grateful to you if you could assist us by participating in our study exploring social, emotional, and cognitive development of children. The study aims to on develop a set of games and activities that can be used with children of a wide age range to evaluate their development in several areas like motor, language, and other cognitive skills.
        \n\nYour child’s participation will take approximately 15-20 minutes, during which time the child will be shown several brief games such as popping the bubbles on the screen, colouring images on the tablet pc’s screen, looking at images on the screen while their eye-movement is tracked and recorded. In some games we might need to video record your child’s activities. The games will be divided into small part to ensure that the child is not tired. Session breaks will be taken if child does not appear to be comfortable.
        \n\nYour and your child’s data will be kept confidential and securely stored, with only an anonymous number identifying it. Information linking that number to the child’s name will be stored securely and separately from the data you provide us. All information collected for the project will be destroyed after a period of 5 years from the completion of the project has elapsed. Taking part in this study is completely voluntary; you may withdraw at any time without having to give any reason. Please feel free to ask any questions (by mailing Indu at i.dubey@reading.ac.uk) that you may have about this study at any point.
        \n\nThis application has been reviewed by the University Research Ethics Committee and has been given a favourable ethical opinion for conduct
        \n\nThank you for your help.
    </string>
    <string name="consent_dialog_success_surveys">My surveys</string>
    <string name="consent_dialog_success_start">Start survey</string>
    <string name="consent_dialog_agree">The procedures have been explained clearly to us, and we have had opportunities to ask questions. Consequently, we are happy to provide consent for our child to take part in this study</string>
    <string name="login_password_reset_title">Restore the password</string>
    <string name="login_password_reset_message">Please, enter your username and date of birth</string>
    <string name="login_password_set_message">Please, enter new password</string>
    <string name="login_password_reset_new_password">New password</string>
    <string name="login_password_reset_confirm_password">Confirm password</string>
    <string name="login_password_reset_username">Username</string>
    <string name="login_password_reset_date">MM  /  DD  /  YYYY</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="synchronize_dialog_error_title">Synchronisation error</string>
    <string name="synchronize_dialog_error_message">An error occurred during the synchronisation. Please check your internet connection and try again.</string>
    <string name="logout_dialog_title">Log out</string>
    <string name="logout_dialog_message">Do you really want to exit?</string>
    <string name="child_name">Child\'s name</string>
    <string name="child_surname">Child\'s surname</string>
    <string name="child_date_of_birth">Tap to set the date of birth</string>
    <string name="child_address">Child\'s address</string>
    <string name="child_dialog_edit_close_title">Edit child\'s info</string>
    <string name="child_dialog_add_close_title">Add new child</string>
    <string name="child_dialog_edit_close_message">Do you really want to exit without saving?</string>
    <string name="child_info_pattern">Born on %1$s</string>
    <string name="child_state_hint">Tap to select the state</string>
    <string name="child_hand_hint">Hand dominance</string>
    <string name="child_hand_right">Right</string>
    <string name="child_hand_left">Left</string>
    <string name="child_hand_ambidexter">Ambidextrous</string>
    <string name="parent_skip_step_text">Skip this step</string>
    <string name="parent_name">Parent\'s name</string>
    <string name="parent_surname">Parent\'s surname</string>
    <string name="parent_date_of_birth">Tap to set the date of birth</string>
    <string name="parent_address">Parent\'s address</string>
    <string name="parent_phone">Phone number</string>
    <string name="parent_email_address">Email address</string>
    <string name="parent_language">Tap to select the language</string>
    <string name="parent_preferable_contact_hint">Preferable method of contact</string>
    <string name="parent_preferable_contact_not_specified">Not specified</string>
    <string name="parent_preferable_contact_post">Post</string>
    <string name="parent_preferable_contact_phone">Phone</string>
    <string name="parent_preferable_contact_email">Email</string>
    <string name="survey_name">Survey %s</string>
    <string name="survey_dialog_delete_title">Delete the survey</string>
    <string name="survey_dialog_delete_message">Are you sure you want to delete the survey? All data will be lost.</string>
    <string name="survey_dialog_download_title">Download the survey</string>
    <string name="survey_dialog_download_message">Are you sure you want to download this survey?</string>
    <string name="child_diagnosis_clinic_doctor_name">Clinic / Doctor name</string>
    <string name="child_diagnosis_describe_diagnosis">Describe diagnosis</string>
    <string name="child_diagnosis_assessment_date">Tap to set the diagnosis date</string>
    <string name="validation_incorrect_name">Incorrect name</string>
    <string name="validation_incorrect_surname">Incorrect surname</string>
    <string name="validation_incorrect_address">Incorrect address</string>
    <string name="validation_incorrect_phone_number">Incorrect phone number</string>
    <string name="validation_incorrect_email">Incorrect email</string>
    <string name="progress_dialog_upload_survey">Survey is being uploaded. Please wait.</string>
</resources>